apps/tftpd-hpa/k8s.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tftpd-hpa
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  labels:
    app.kubernetes.io/name: tftpd-hpa
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: tftpd-hpa
  template:
    metadata:
      labels:
        app.kubernetes.io/name: tftpd-hpa
    spec:
      hostNetwork: true
      nodeSelector:
        node-role/workload: zfs
      containers:
      - name: tftpd-hpa
        image: 3x3cut0r/tftpd-hpa:5.2
        resources:
          requests:
            cpu: 10m
            memory: 32Mi
        volumeMounts:
          - name: tftpboot
            mountPath: /tftpboot
      volumes:
        - name: tftpboot
          hostPath:
            path: /vol_raidz1/images/
            type: Directory
