apps/tftpd-hpa/k8s.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tftpd-hpa
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "30"
  labels:
    app.kubernetes.io/name: tftpd-hpa
spec:
  type: ClusterIP
  externalIPs:
    - 192.168.1.45
  ports:
    - port: 69
      targetPort: 69
      protocol: UDP
      name: tftp
  selector:
    app.kubernetes.io/name: tftpd-hpa
