apps/tftpd-hpa/k8s.np.tftpd-hpa.yaml
---
# TFTP Network Policy
# Allows TFTP clients from local network and cluster to access boot files
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: tftpd-hpa
  namespace: media
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: tftpd-hpa
  ingress:
  # Allow TFTP clients to connect
  # TFTP is used for PXE boot and firmware updates on local network
  - fromEntities:
    - world
    - cluster
    toPorts:
    - ports:
      - port: '69'
        protocol: UDP
  egress:
  # Allow TFTP data transfer back to clients
  # TFTP uses UDP and responds from high ports (4096-32760) back to the client
  # This is required because TFTP is a stateless protocol where the server
  # initiates the data transfer from a different port than the request port
  - toEntities:
    - world
    - cluster
    toPorts:
    - ports:
      - port: '0'
        endPort: 65535
        protocol: UDP
  # Allow DNS resolution via CoreDNS
  - toEndpoints:
    - matchLabels:
        k8s:io.cilium.k8s.namespace.labels.kubernetes.io/metadata.name: kube-system
        k8s:io.kubernetes.pod.namespace: kube-system
        k8s:k8s-app: kube-dns
    toPorts:
    - ports:
      - port: '53'
        protocol: UDP
      - port: '53'
        protocol: TCP
